# ISPstats

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  main.cpp  sql черновик
handlers/: handlers.cpp  handlers.h
handlers/include/: Error.h  Factory.h  handlers.h
handlers/scr/: Error.cpp  Factory.cpp  handlers.cpp
include/: DBConnector.h  Gets.h  Logger.h  Server.h
src/: DBConnector.cpp  Gets.cpp  Logger.cpp  Server.cpp
unities/include/: Base.h  JobsForPerson.h  JobsForSprint.h  LeaderPerson.h  LeaderSprint.cpp  LeaderSprint.h  PersonBase.h  ProjectBase.h  SprintBase.h  SprintsAndProjects.h
unities/src/: Base.cpp  JobsForPerson.cpp  JobsForSprint.cpp  LeaderPerson.cpp  LeaderSprint.cpp  PersonBase.cpp  ProjectBase.cpp  SprintBase.cpp  SprintsAndProjects.cpp
unittest/: database_test.cpp  marshalling_test.cpp  to_json.cpp
web/: admin-update.html  index.html  persons.html  persons.js  projects.html  sprints.html  sprints.js
web/footable-bootstrap.latest/: columns.json
web/footable-bootstrap.latest/js/: .directory  footable.js  footable.min.js
web/scripts/: admin-update.js  leaders.js  persons.js  projects.js  sprints.js
web/styles/: footable_styles.css
